--- a/Report/07-final-model.Rmd
+++ b/Report/07-final-model.Rmd
@@ -1,7 +1,6 @@
-# Capitolo 7
-## sviluppo del modello di rischio che contiene anche il set selezionato di variabili di espressione genica
+# Modello di Cox con covariate geniche
 
-```{r}
+```{r include=FALSE}
 library("survival")
 library("survminer")
 
@@ -13,9 +12,7 @@ dataset = read.table(
   header = T,
   row.names = NULL
 )
-```
 
-```{r}
 # Rimuovo l'id della riga
 dataset <- dataset[,-1]
 
@@ -28,7 +25,10 @@ dataset$Grade <- ifelse(dataset$Grade == "Poorly diff",
                         ifelse(dataset$Grade == "Intermediate", 1, 2))
 ```
 
+## Operazioni preliminari
+Estraiamo dal dataset solo le feature selezionate:
 ```{r}
+adlasso.HR = readRDS("../adlassohr.rds")
 idx_genic <- c(8:77)
 idx_genic <- idx_genic[adlasso.HR != 1]
 
@@ -37,10 +37,9 @@ dataset <- dataset[, c(1:7, idx_genic)]
 
 ```
 
+## Modello di Cox
+Fittiamo il modello di Cox utilizzando anche le covariate geniche:
 ```{r}
-formula <- paste("Diam + N + ER + factor(Grade) + Age",
-                 paste(names(dataset[, 8:length(dataset)]), collapse = ' + '),
-                 sep = " + ")
 model <-
   coxph(
     formula = Surv(time, event) ~ Diam + N + ER + Grade + Age + Contig63649_RC + QSCN6L1 +
@@ -50,19 +49,14 @@ model <-
       PITRM1 + IGFBP5.1 + PRC1 + Contig20217_RC + EGLN1 + ESM1,
     data = dataset
   )
+
 summary(model)
 ```
-```{r}
-ggsurvplot(
-  survfit(model),
-  data = dataset,
-  palette = "#2E9FDF",
-  ggtheme = theme_minimal()
-)
-```
+Vediamo che i test statistici per la maggior parte delle covariate sono significativi e quindi i coefficienti sono effettivamente utili per la discriminazione del modello.
 
+## Modello baseline
+Costruiamo il modello baseline:
 ```{r}
-# Modello basale
 bas <- basehaz(model, centered = FALSE)
 bas.surv <- exp(-bas[, 1])
 plot(
@@ -73,19 +67,59 @@ plot(
   ylim = c(0, 1) ,
   xlim = c(0, 18),
   lty = 2,
-  xlab = 'time',
-  ylab = 'survival probability'
+  xlab = 'tempo (mesi)',
+  ylab = 'probabilità di sopravvivenza'
 )
+
+fit <- survfit(model)
+lines(x = fit$time, y = fit$surv, type='s', lwd=2, col=2, lty = 1)
+
+basal <- readRDS("../basal-model.rds")
+fit <- survfit(basal)
+lines(x = fit$time, y = fit$surv, type='s', lwd=2, col=3, lty = 1)
+
+legend("topright", c("baseline", "genic", "clinic"), col = 1:3, lty=c(2, 1, 1))
 ```
+Vediamo che il modello con le sole covariate cliniche da una stima estremamente ottimistica della probabilità di sopravvivenza.
+
+## Valutazione dell'azzardo proporzionale
+
+Dall'analisi dei residui di Schoenfeld corretti e non con il metodo di Lin (link alla appendice) emerge che la variabile SCUBE2 non rispetta l'ipotesi di azzardo proporzionale, decidiamo quindi di eliminarla dal modello.
 
 ```{r}
-# Residui di Schoenfeld per variabili geniche 
-# DA FARE
+model2 <-
+  coxph(
+    formula = Surv(time, event) ~ Diam + N + ER + Grade + Age + Contig63649_RC + QSCN6L1 +
+      Contig32125_RC + OXCT1 + MMP9 + RUNDC1 + KNTC2 +
+      SERF1A + GPR180 + RAB6B + ZNF533 + RTN4RL1 + MTDH + Contig40831_RC +
+      COL4A2 + STK32B + GPR126 + SLC2A3 + PECI.1 + ORC6L + RFC4 + MS4A7 +
+      PITRM1 + IGFBP5.1 + PRC1 + Contig20217_RC + EGLN1 + ESM1,
+    data = dataset
+  )
 
-```
+bas <- basehaz(model2, centered = FALSE)
+bas.surv <- exp(-bas[, 1])
+plot(
+  bas$time,
+  bas.surv,
+  type = 's',
+  col = 1,
+  ylim = c(0, 1) ,
+  xlim = c(0, 18),
+  lty = 2,
+  xlab = 'tempo (mesi)',
+  ylab = 'probabilità di sopravvivenza'
+)
 
-```{r}
-# Verifica dei residui con il metodo di Lin
-library("goftte")
-prop(model)
+fit <- survfit(model)
+lines(x = fit$time, y = fit$surv, type='s', lwd=2, col=2, lty = 1)
+
+fit <- survfit(model2)
+lines(x = fit$time, y = fit$surv, type='s', lwd=2, col=3, lty = 1)
+
+basal <- readRDS("../basal-model.rds")
+fit <- survfit(basal)
+lines(x = fit$time, y = fit$surv, type='s', lwd=2, col=4, lty = 3)
+
+legend("topright", c("baseline", "genic", "genic-2", "clinic"), col = 1:4, lty=c(2, 1, 1, 1))
 ```
