--- a/Report/02-descriptive-statistics.Rmd
+++ b/Report/02-descriptive-statistics.Rmd
@@ -36,19 +36,24 @@ dataset$ER <- ifelse(dataset$ER == "Negative", 0, 1)
 dataset$Grade <- ifelse(dataset$Grade == "Poorly diff",
                         0,
                         ifelse(dataset$Grade == "Intermediate", 1, 2))
+
+VAR_NUMERIC <- c("time", "event", "Diam", "N", "ER", "Grade", "Age")
 ```
 
 ### Computazione statistiche
 
 ```{r}
-pander(describe(dataset), big.mark = ",") #-- statistiche 
+pander(describe(dataset), big.mark = ",") #-- statistiche descrittive
 ```
-Dalle statistiche vediamo che il tempo massimo di follow-up è di quasi 18 mesi e abbiamo più censure che eventi (media < 0.5).
+Dalle statistiche vediamo che il tempo massimo di follow-up è di quasi 18 mesi e abbiamo più censure che eventi (media < 0.5). La media d'eta dei pazienti del nostro dataset e' di 44 anni, da un minimo di 26 anni ad un massimo di 53. Notiamo come il 33% dei pazienti sia deceduto al termine della terapia (mean-event).
+
 \newpage
 
 ```{r}
-plot(dataset, pch = 19, cex = .5) #-- scatter plot multivariato
+pander(cor(dataset[,VAR_NUMERIC]),big.mark=",") #-- matrice di correlazione
 ```
+Da una prima matrice di correlazione, tra le variabili principali dello studio, notiamo come solamente la variabile event abbia una correlazione di poco superiore a 0,5. 
+
 \newpage
 
 ```{r}
@@ -61,3 +66,7 @@ for (i in names(dataset))
           ylab = i)
 }
 ```
+
+Focalizzandosi sulle distribuzioni delle variabili "time" ed "Age" nei grafici dei boxplot:
+  - la distribuzione tra il quartile superiore ed il quartile inferiore della variabile "time" ci indica che il 50% dei pazienti hanno avuto un trattamento di una durata tra i 6 ed i 10 mesi. Non sono presenti outlier.
+  - la distribuzione tra il quartile superiore ed il quartile inferiore della variabile "Age" ci indica che l'età del 50% dei pazienti, al momento della diagnosi, si aggirava attori i 42 ed i 48 anni. è presente un solo outlier, il valore minimo riscontrato nella distribuzione (26 anni), un'eccezione rispetto all'età dei pazienti restanti che si aggira tra i 29 ed i 53 anni.
