--- a/Report/bibliography.bib
+++ b/Report/bibliography.bib
@@ -1,14 +1,54 @@
-@article{lin,
- ISSN = {00063444},
- URL = {http://www.jstor.org/stable/2337177},
- abstract = {This paper presents a new class of graphical and numerical methods for checking the adequacy of the Cox regression model. The procedures are derived from cumulative sums of martingale-based residuals over follow-up time and/or covariate values. The distributions of these stochastic processes under the assumed model can be approximated by zero-mean Gaussian processes. Each observed process can then be compared, both visually and analytically, with a number of simulated realizations from the approximate null distribution. These comparisons enable the data analyst to assess objectively how unusual the observed residual patterns are. Special attention is given to checking the functional form of a covariate, the form of the link function, and the validity of the proportional hazards assumption. An omnibus test, consistent against any model misspecification, is also studied. The proposed techniques are illustrated with two real data sets.},
- author = {D. Y. Lin and L. J. Wei and Z. Ying},
- journal = {Biometrika},
- number = {3},
- pages = {557--572},
- publisher = {[Oxford University Press, Biometrika Trust]},
- title = {Checking the Cox Model with Cumulative Sums of Martingale-Based Residuals},
- volume = {80},
- year = {1993}
-}
+%% This BibTeX bibliography file was created using BibDesk.
+%% https://bibdesk.sourceforge.io/
 
+%% Created for Emanuele Carnati at 2019-05-26 17:24:41 +0200 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@book{CancerGenetics,
+	Author = {Boris Pasche},
+	Date-Added = {2019-05-26 15:23:56 +0000},
+	Date-Modified = {2019-05-26 15:24:37 +0000},
+	Publisher = {Springer},
+	Title = {Cancer Genetics (Cancer Treatment and Research)},
+	Year = {2010}}
+
+@book{Trastuzumab,
+	Author = {Romond EH, Perez EA, Bryant J, Suman VJ, Geyer CE, Davidson NE, Tan-Chiu E, Martino S, Paik S, Kaufman PA, Swain SM, Pisansky TM, Fehrenbacher L, Kutteh LA, Vogel VG, Visscher DW, Yothers G, Jenkins RB, Brown AM, Dakhil SR, Mamounas EP, Lingle WL, Klein PM, Ingle JN, Wolmark N},
+	Date-Added = {2019-05-26 15:22:06 +0000},
+	Date-Modified = {2019-05-26 15:23:13 +0000},
+	Title = {Trastuzumab plus adjuvant chemotherapy for operable HER2-positive breast cancer},
+	Year = {2005}}
+
+@book{MerckManual,
+	Annote = {ch 253, Breast Cancer  },
+	Date-Added = {2019-05-26 15:20:14 +0000},
+	Date-Modified = {2019-05-26 15:21:44 +0000},
+	Title = {Merck Manual}}
+
+@url{https://www.cancer.gov/types/breast/hp/breast-treatment-pdqsection/all?redirecttrue,
+	Date-Added = {2019-05-26 15:19:47 +0000},
+	Date-Modified = {2019-05-26 15:20:01 +0000}}
+
+@article{WorldCancerReport,
+	Date-Added = {2019-05-26 15:18:31 +0000},
+	Date-Modified = {2019-05-26 15:19:32 +0000},
+	Journal = {International Agency for Research on Cancer},
+	Year = {2008}}
+
+@article{lin,
+	Abstract = {This paper presents a new class of graphical and numerical methods for checking the adequacy of the Cox regression model. The procedures are derived from cumulative sums of martingale-based residuals over follow-up time and/or covariate values. The distributions of these stochastic processes under the assumed model can be approximated by zero-mean Gaussian processes. Each observed process can then be compared, both visually and analytically, with a number of simulated realizations from the approximate null distribution. These comparisons enable the data analyst to assess objectively how unusual the observed residual patterns are. Special attention is given to checking the functional form of a covariate, the form of the link function, and the validity of the proportional hazards assumption. An omnibus test, consistent against any model misspecification, is also studied. The proposed techniques are illustrated with two real data sets.},
+	Author = {D. Y. Lin and L. J. Wei and Z. Ying},
+	Issn = {00063444},
+	Journal = {Biometrika},
+	Number = {3},
+	Pages = {557--572},
+	Publisher = {[Oxford University Press, Biometrika Trust]},
+	Title = {Checking the Cox Model with Cumulative Sums of Martingale-Based Residuals},
+	Url = {http://www.jstor.org/stable/2337177},
+	Volume = {80},
+	Year = {1993},
+	Bdsk-Url-1 = {http://www.jstor.org/stable/2337177}}
