--- a/Report/07-final-model.Rmd
+++ b/Report/07-final-model.Rmd
@@ -37,6 +37,7 @@ dataset <- dataset[, c(1:7, idx_genic)]
 
 ```
 
+
 ## Modello di Cox
 Fittiamo il modello di Cox utilizzando anche le covariate geniche:
 ```{r}
@@ -53,6 +54,7 @@ model <-
 summary(model)
 ```
 Vediamo che i test statistici per la maggior parte delle covariate sono significativi e quindi i coefficienti sono effettivamente utili per la discriminazione del modello.
+
 
 ## Modello baseline
 Costruiamo il modello baseline:
@@ -123,3 +125,167 @@ lines(x = fit$time, y = fit$surv, type='s', lwd=2, col=4, lty = 3)
 
 legend("topright", c("baseline", "genic", "genic-2", "clinic"), col = 1:4, lty=c(2, 1, 1, 1))
 ```
+
+\newpage
+
+## Calibrazione e discriminazione del modello
+
+### Calibrazione
+
+Calcoliamo il rischio di morte al tempo t = 12 mesi, usando come modello il model2.
+
+```{r}
+# Predictiveness
+fit <- survfit(model2, newdata = dataset)
+
+dataset$riskdeath <- 1 - as.numeric(summary(fit, times = 12)$surv)
+
+dataset$event.12m <- ifelse(dataset$time <= 12 &
+                             dataset$event == 1, 1, 0)
+
+# probabilità cumulata
+estmodel <- survfit(Surv(riskdeath, event.12m) ~ 1, data = dataset)
+```
+
+### Predictiveness curve
+
+Valutiamo la calibrazione del modello tramite predictiveness curve.
+```{r echo=FALSE}
+# Predictiveness curve del modello
+plot((1 - estmodel$surv) * 100,
+     estmodel$time,
+     main = '',
+     type = 'l',
+     ylim = c(0, 1),
+     lwd = 3,
+     ylab = 'r',
+     cex.lab = 1.7,
+     cex.axis = 1.7,
+     xlab = expression(paste('P(riskscore', '' <= 'r)*100')),
+     xaxt = "n",
+     yaxt = "n",
+     frame = F
+)
+
+axis(
+  2,
+  at = c(0, 0.2, 0.4, 0.6, 0.8, 1),
+  labels = NA,
+  pos = 0
+)
+
+axis(
+  2,
+  at = c(0, 0.2, 0.4, 0.6, 0.8, 1),
+  labels = c(0, 0.2, 0.4, 0.6, 0.8, 1),
+  cex.axis = 1.7,
+  pos = 0
+)
+
+axis(
+  1,
+  at = c(0, 20, 40, 60, 80, 100),
+  labels = c(0, 20, 40, 60, 80, 100),
+  cex.axis = 1.7,
+  pos = 0
+)
+
+#Plottiamo anche la prevalenza p e la curva del predittore di rischio ideale.
+# Predictiveness curve of a useless model:
+p <- sum(dataset$event.12m) / dim(dataset)[1]
+
+lines(c(0, 100),
+      c(p, p),
+      lty = 2,
+      lwd = 3,
+      col = 'gray')
+
+text(40, 0.1, labels = bquote(rho ==  .(round(p, 3) * 100) ~ '%'), cex = 1.7) 
+
+# Predictiveness curve of the ideal risk predictor:
+lines(c(0, (1 - p) * 100), c(0, 0), lwd = 4)
+lines(c((1 - p) * 100, (1 - p) * 100), c(0, 1), lwd = 4)
+lines(c((1 - p) * 100, 100), c(1, 1), lwd = 4)
+```
+
+Rispetto al modello perfetto, che arriva fino al 68.1% (complementare della probabilità 31.9%), la nostra predictivness curve ci mostra come il modello sovrastimi eccessivamente il rischio di morte del paziente.
+
+\newpage
+
+### Brier score
+
+Valutiamo il Brier score:
+```{r}
+brier_score <- mean((dataset$event.12m - dataset$riskdeath) ^ 2)
+
+# Brier Score under strong calibration
+brier_score_sc <- mean(dataset$riskdeath * (1 - dataset$riskdeath))
+
+print(paste("Brier score: ", brier_score))
+print(paste("Brier score under strong calibration: ", brier_score_sc))
+```
+Il valore del Brier score è più vicino allo zero che all'uno e ciò indica che il modello è ben calibrato.
+
+### Discriminazione
+Valutiamo l'accuratezza della predizione del rischio e Scegliamo poi la soglia migliore da utilizzare usando l'indice di Youden:
+
+```{r echo=FALSE}
+
+roc_model <- roc(dataset$event.12m, dataset$riskdeath)
+
+Youden <- roc_model$sensitivities + roc_model$specificities - 1
+optimal.cut.off <- roc_model$thresholds[Youden == max(Youden)]
+
+plot(
+  1 - roc_model$specificities,
+  roc_model$sensitivities,
+  type = 'l',
+  ylab = 'TPF',
+  xlab = 'FPF',
+  lwd = 3,
+  xaxt = "n",
+  yaxt = "n",
+  xlim = c(0, 1),
+  cex.lab = 1.7,
+  frame = F
+)
+
+axis(1,
+     at = c(0, 0.25, 0.5, 0.75, 1),
+     labels = NA,
+     pos = 0)
+
+axis(
+  1,
+  at = c(0, 0.25, 0.5, 0.75, 1),
+  labels = c(0, 0.25, 0.5, 0.75, 1),
+  cex.axis = 1.7,
+  pos = 0
+)
+
+axis(
+  2,
+  at = c(0, 0.25, 0.5, 0.75, 1),
+  labels = c(0, 0.25, 0.5, 0.75, 1),
+  cex.axis = 1.7,
+  pos = 0
+)
+
+lines(x = c(0, 1), y = c(0, 1))
+
+cbind(optimal.cut.off, Youden = max(Youden))
+
+points(
+  1 - roc_model$specificities[roc_model$thresholds == optimal.cut.off],
+  roc_model$sensitivities[roc_model$thresholds == optimal.cut.off],
+  pch = 0,
+  cex = 1.7
+)
+```
+
+```{r}
+AUC <- roc_model$auc
+print(AUC)
+```
+Con un AUC = 0.923 il modello ha un risultato molto accurato.
+Il valore che massimizza la differenza tra veri e falsi positivi è derivato dallo Youden ed è pari a $0,6191$, valore sicuramente molto elevato ed identificativo come il punto di cut-off ottimale.
