--- a/Report/08-test-prediction.Rmd
+++ b/Report/08-test-prediction.Rmd
@@ -1,2 +1,58 @@
 # Capitolo 8
-## Predizione del rischio di evento per 3 soggetti «tipo»
+## Predizione del rischio di evento per 3 soggetti «tipo» (scelti casualmente nel dataset o nuovi ipotetici soggetti) basata sul nuovo modello
+
+```{r include=FALSE}
+library("survival")
+library("survminer")
+
+# carico il dataset
+dataset = read.table(
+  "../dataset.csv",
+  na.strings = ".",
+  sep = "\t",
+  header = T,
+  row.names = NULL
+)
+
+# Rimuovo l'id della riga
+dataset <- dataset[,-1]
+
+# Converto le variabili categoriche in categorie numeriche
+dataset$Diam <- ifelse(dataset$Diam == "<=2cm", 0, 1)
+dataset$N <- ifelse(dataset$N == "<4", 0, 1)
+dataset$ER <- ifelse(dataset$ER == "Negative", 0, 1)
+dataset$Grade <- ifelse(dataset$Grade == "Poorly diff",
+                        0,
+                        ifelse(dataset$Grade == "Intermediate", 1, 2))
+```
+
+## Operazioni preliminari
+Estraiamo dal dataset solo le feature selezionate:
+```{r}
+adlasso.HR = readRDS("../adlassohr.rds")
+idx_genic <- c(8:77)
+idx_genic <- idx_genic[adlasso.HR != 1]
+
+# Scelgo le feature geniche in base all'adaptive lasso
+dataset <- dataset[, c(1:7, idx_genic)]
+```
+
+
+## Creiamo il dataset dei tre soggetti tipo
+
+Escludere i pazienti con un potenziale follow-up < 1 anno. Ciò produrrà in modo imparziale un campione in cui tutti i pazienti vivi sono stati osservati per almeno 1 anno.
+
+```{r}
+dataset.1y<-dataset[dataset$time>=12,]
+table(dataset.1y$time>=12, dataset.1y$event)
+```
+
+Abbiamo prodotto un subset di 17 pazienti, di cui 15 a fine trattamento non sono deceduti.
+
+```{r}
+# creo il dataset dei 3 soggetti tipo, scelti casualmente dalla tabella
+dataset.3 = dataset.1y[sample(nrow(dataset.1y), 3), ]
+```
+
+
+## Predizione del rischio dei 3 soggetti tipo basata sul nuovo modello
